--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Index</title>
-	<link rel="stylesheet" href="css/libs.min.css">
+	<!-- <link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link rel="stylesheet" href="fonts/stylesheet.css">
-	<link rel="stylesheet" href="fonts/muller/stylesheet.css">
+	<link rel="stylesheet" href="fonts/muller/stylesheet.css"> -->
 
 </head>
 <body>
-	<header>
+	<!-- <header>
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-5 col-lg-4">
@@ -414,7 +414,8 @@
 
 <script src="js/libs.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
-<script src="js/common.js"></script>
+<script src="js/common.js"></script>-->
+	Тут ни чего нет
 </body>
 </html>
 
